--- a/index.html
+++ b/index.html
@@ -3,17 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Icomoon-->
+    <!-- Icomoon -->
     <link rel="stylesheet" href="./assets/css/icomoon.css">
-    <!--CSS-->
+    <!-- Css -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- fonts -->
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <header id="header" class="scroll">
+        <nav class="container">
+            <a href="#" class="logo">beauty<span>salon</span>.</a>
+            <!-- Menu Desktop -->
+            <div class="menu">
+                <ul class="grid">
+                    <li><a href="" class="title">Início</a></li>
+                    <li><a href="" class="title">Sobre</a></li>
+                    <li><a href="" class="title">Serviços</a></li>
+                    <li><a href="" class="title">Depoimentos</a></li>
+                    <li><a href="" class="title">Contato</a></li>
+                </ul>
+            </div>
+            <!-- Menu Mobile -->
+            <div class="toggle icon-menu"></div>
+            <div class="toggle icon-close"></div>
+        </nav>
+    </header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer></footer>
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
